--- a/src/components/NewUser/EnrollsViewer/EnrollsViewer.style.scss
+++ b/src/components/NewUser/EnrollsViewer/EnrollsViewer.style.scss
@@ -22,6 +22,7 @@
       border-radius: var(--radius-xs);
       opacity: 0;
       transition: opacity 0.2s;
+      pointer-events: none;
 
       @include positioning();
 
