--- a/src/components/Form/InputGroup/InputGroup.style.scss
+++ b/src/components/Form/InputGroup/InputGroup.style.scss
@@ -7,9 +7,17 @@
   gap: var(--spacing-xl) var(--spacing-l);
 
   &.dynamicListItem {
-    & > .action {
+    & > .actions {
+      display: flex;
       flex-grow: 0;
-      align-self: flex-end;
+
+      @include mobile {
+        align-self: stretch;
+
+        & > * {
+          flex: 1;
+        }
+      }
     }
   }
 
@@ -18,6 +26,7 @@
   }
 
   @include mobile {
-    display: grid;
+    flex-direction: column;
+    align-items: stretch;
   }
 }
