Added course to session report

--- a/src/components/Form/MenuInput/MenuInput.style.scss
+++ b/src/components/Form/MenuInput/MenuInput.style.scss
@@ -5,6 +5,7 @@
     .Input {
       .FieldWrapper {
         height: unset;
+        padding: calc(var(--spacing-m) - 3px);
       }
 
       .selected {
